(#6) Enable addition and deletion of cakes (#20)
There is an issue with lombok, that throws exceptions when